<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashboardBackground"
    tools:context="com.example.shuangzhecheng.propertymanagementrjt.Fragment.FragmentLoginLandLord">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:padding="20dp"
        android:text="@string/register_frag"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="131dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/landlordem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:hint="Your Email Address"
                android:textColorHint="@android:color/background_dark"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_dark" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/landlordpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_dark" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonlandlordlogin"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="LANDLORD SIGN IN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>
