<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_welcome">


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:alpha=".5"
        android:layout_above="@id/barck"
        android:background="#ffffff" />
    <View
        android:id="@+id/barck"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:alpha=".5"
        android:layout_above="@id/btn_signup"
        android:background="@null" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dots_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"></LinearLayout>



    <Button
        android:id="@+id/btn_signup"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_above="@id/layoutDots"
        android:layout_alignParentRight="true"
        android:background="@drawable/my_button_bg"
        android:text="SIGN UP"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_above="@id/layoutDots"
        android:layout_alignParentLeft="true"
        android:background="@drawable/my_button_bg"
        android:text="LOGIN"
        android:textColor="#fff" />

</RelativeLayout>